y.output
Terminals unused in grammar

   t_lws
   t_ctl


State 25 conflicts: 6 shift/reduce


Grammar

    0 $accept: request $end

    1 allowed_char_for_token: t_token_char
    2                       | t_digit
    3                       | t_dot

    4 token: allowed_char_for_token
    5      | token allowed_char_for_token

    6 allowed_char_for_text: allowed_char_for_token
    7                      | t_separators
    8                      | t_colon
    9                      | t_backslash

   10 text: allowed_char_for_text
   11     | text ows allowed_char_for_text

   12 ows: %empty
   13    | t_sp
   14    | t_ws

   15 request_line: token t_sp text t_sp text t_crlf

   16 request_header: token ows t_colon ows text ows t_crlf

   17 request_header_list: request_header
   18                    | request_header request_header_list

   19 request: request_line request_header_list t_crlf


Terminals, with rules where they appear

$end (0) 0
error (256)
t_crlf (258) 15 16 19
t_backslash (259) 9
t_digit (260) 2
t_dot (261) 3
t_token_char (262) 1
t_lws (263)
t_colon (264) 8 16
t_separators (265) 7
t_sp (266) 13 15
t_ws (267) 14
t_ctl (268)


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
allowed_char_for_token (15)
    on left: 1 2 3, on right: 4 5 6
token (16)
    on left: 4 5, on right: 5 15 16
allowed_char_for_text (17)
    on left: 6 7 8 9, on right: 10 11
text (18)
    on left: 10 11, on right: 11 15 16
ows (19)
    on left: 12 13 14, on right: 11 16
request_line (20)
    on left: 15, on right: 19
request_header (21)
    on left: 16, on right: 17 18
request_header_list (22)
    on left: 17 18, on right: 18 19
request (23)
    on left: 19, on right: 0


State 0

    0 $accept: . request $end

    t_digit       shift, and go to state 1
    t_dot         shift, and go to state 2
    t_token_char  shift, and go to state 3

    allowed_char_for_token  go to state 4
    token                   go to state 5
    request_line            go to state 6
    request                 go to state 7


State 1

    2 allowed_char_for_token: t_digit .

    $default  reduce using rule 2 (allowed_char_for_token)


State 2

    3 allowed_char_for_token: t_dot .

    $default  reduce using rule 3 (allowed_char_for_token)


State 3

    1 allowed_char_for_token: t_token_char .

    $default  reduce using rule 1 (allowed_char_for_token)


State 4

    4 token: allowed_char_for_token .

    $default  reduce using rule 4 (token)


State 5

    5 token: token . allowed_char_for_token
   15 request_line: token . t_sp text t_sp text t_crlf

    t_digit       shift, and go to state 1
    t_dot         shift, and go to state 2
    t_token_char  shift, and go to state 3
    t_sp          shift, and go to state 8

    allowed_char_for_token  go to state 9


State 6

   19 request: request_line . request_header_list t_crlf

    t_digit       shift, and go to state 1
    t_dot         shift, and go to state 2
    t_token_char  shift, and go to state 3

    allowed_char_for_token  go to state 4
    token                   go to state 10
    request_header          go to state 11
    request_header_list     go to state 12


State 7

    0 $accept: request . $end

    $end  shift, and go to state 13


State 8

   15 request_line: token t_sp . text t_sp text t_crlf

    t_backslash   shift, and go to state 14
    t_digit       shift, and go to state 1
    t_dot         shift, and go to state 2
    t_token_char  shift, and go to state 3
    t_colon       shift, and go to state 15
    t_separators  shift, and go to state 16

    allowed_char_for_token  go to state 17
    allowed_char_for_text   go to state 18
    text                    go to state 19


State 9

    5 token: token allowed_char_for_token .

    $default  reduce using rule 5 (token)


State 10

    5 token: token . allowed_char_for_token
   16 request_header: token . ows t_colon ows text ows t_crlf

    t_digit       shift, and go to state 1
    t_dot         shift, and go to state 2
    t_token_char  shift, and go to state 3
    t_sp          shift, and go to state 20
    t_ws          shift, and go to state 21

    $default  reduce using rule 12 (ows)

    allowed_char_for_token  go to state 9
    ows                     go to state 22


State 11

   17 request_header_list: request_header .
   18                    | request_header . request_header_list

    t_digit       shift, and go to state 1
    t_dot         shift, and go to state 2
    t_token_char  shift, and go to state 3

    $default  reduce using rule 17 (request_header_list)

    allowed_char_for_token  go to state 4
    token                   go to state 10
    request_header          go to state 11
    request_header_list     go to state 23


State 12

   19 request: request_line request_header_list . t_crlf

    t_crlf  shift, and go to state 24


State 13

    0 $accept: request $end .

    $default  accept


State 14

    9 allowed_char_for_text: t_backslash .

    $default  reduce using rule 9 (allowed_char_for_text)


State 15

    8 allowed_char_for_text: t_colon .

    $default  reduce using rule 8 (allowed_char_for_text)


State 16

    7 allowed_char_for_text: t_separators .

    $default  reduce using rule 7 (allowed_char_for_text)


State 17

    6 allowed_char_for_text: allowed_char_for_token .

    $default  reduce using rule 6 (allowed_char_for_text)


State 18

   10 text: allowed_char_for_text .

    $default  reduce using rule 10 (text)


State 19

   11 text: text . ows allowed_char_for_text
   15 request_line: token t_sp text . t_sp text t_crlf

    t_sp  shift, and go to state 25
    t_ws  shift, and go to state 21

    $default  reduce using rule 12 (ows)

    ows  go to state 26


State 20

   13 ows: t_sp .

    $default  reduce using rule 13 (ows)


State 21

   14 ows: t_ws .

    $default  reduce using rule 14 (ows)


State 22

   16 request_header: token ows . t_colon ows text ows t_crlf

    t_colon  shift, and go to state 27


State 23

   18 request_header_list: request_header request_header_list .

    $default  reduce using rule 18 (request_header_list)


State 24

   19 request: request_line request_header_list t_crlf .

    $default  reduce using rule 19 (request)


State 25

   13 ows: t_sp .
   15 request_line: token t_sp text t_sp . text t_crlf

    t_backslash   shift, and go to state 14
    t_digit       shift, and go to state 1
    t_dot         shift, and go to state 2
    t_token_char  shift, and go to state 3
    t_colon       shift, and go to state 15
    t_separators  shift, and go to state 16

    t_backslash   [reduce using rule 13 (ows)]
    t_digit       [reduce using rule 13 (ows)]
    t_dot         [reduce using rule 13 (ows)]
    t_token_char  [reduce using rule 13 (ows)]
    t_colon       [reduce using rule 13 (ows)]
    t_separators  [reduce using rule 13 (ows)]

    allowed_char_for_token  go to state 17
    allowed_char_for_text   go to state 18
    text                    go to state 28


State 26

   11 text: text ows . allowed_char_for_text

    t_backslash   shift, and go to state 14
    t_digit       shift, and go to state 1
    t_dot         shift, and go to state 2
    t_token_char  shift, and go to state 3
    t_colon       shift, and go to state 15
    t_separators  shift, and go to state 16

    allowed_char_for_token  go to state 17
    allowed_char_for_text   go to state 29


State 27

   16 request_header: token ows t_colon . ows text ows t_crlf

    t_sp  shift, and go to state 20
    t_ws  shift, and go to state 21

    $default  reduce using rule 12 (ows)

    ows  go to state 30


State 28

   11 text: text . ows allowed_char_for_text
   15 request_line: token t_sp text t_sp text . t_crlf

    t_crlf  shift, and go to state 31
    t_sp    shift, and go to state 20
    t_ws    shift, and go to state 21

    $default  reduce using rule 12 (ows)

    ows  go to state 26


State 29

   11 text: text ows allowed_char_for_text .

    $default  reduce using rule 11 (text)


State 30

   16 request_header: token ows t_colon ows . text ows t_crlf

    t_backslash   shift, and go to state 14
    t_digit       shift, and go to state 1
    t_dot         shift, and go to state 2
    t_token_char  shift, and go to state 3
    t_colon       shift, and go to state 15
    t_separators  shift, and go to state 16

    allowed_char_for_token  go to state 17
    allowed_char_for_text   go to state 18
    text                    go to state 32


State 31

   15 request_line: token t_sp text t_sp text t_crlf .

    $default  reduce using rule 15 (request_line)


State 32

   11 text: text . ows allowed_char_for_text
   16 request_header: token ows t_colon ows text . ows t_crlf

    t_sp  shift, and go to state 20
    t_ws  shift, and go to state 21

    $default  reduce using rule 12 (ows)

    ows  go to state 33


State 33

   11 text: text ows . allowed_char_for_text
   16 request_header: token ows t_colon ows text ows . t_crlf

    t_crlf        shift, and go to state 34
    t_backslash   shift, and go to state 14
    t_digit       shift, and go to state 1
    t_dot         shift, and go to state 2
    t_token_char  shift, and go to state 3
    t_colon       shift, and go to state 15
    t_separators  shift, and go to state 16

    allowed_char_for_token  go to state 17
    allowed_char_for_text   go to state 29


State 34

   16 request_header: token ows t_colon ows text ows t_crlf .

    $default  reduce using rule 16 (request_header)
